# eliza-rs

./: .gitignore  Cargo.toml  README.md
asuka-core/: Cargo.toml
asuka-core/src/: agent.rs  attention.rs  knowledge.rs  lib.rs  mod.rs
asuka-core/src/clients/: discord.rs  mod.rs  telegram.rs  twitter.rs
asuka-core/src/knowledge/: models.rs  store.rs  types.rs
asuka-core/src/loaders/: github.rs
asuka-core/src/mcp/: mod.rs  transport.rs
asuka-core/src/stores/: sqlite.rs
asuka-starknet/: Cargo.toml
asuka-starknet/src/: add_token.rs  controller.rs  lib.rs  swap.rs  transfer.rs
asuka-starknet/src/starknet/: mod.rs  swap.rs
characters/: shinobi.toml  shinobi.yaml
cmd/: main.rs
examples/: Cargo.toml
examples/src/: main.rs
examples/src/characters/: shinobi.toml
src/: agent.rs  character.rs  discord.rs  github.rs  knowledge.rs  lib.rs  main.rs  mod.rs
src/characters/: shinobi.toml
src/clients/: discord.rs
src/loaders/: github.rs
src/stores/: sqlite.rs
