[workspace]
members = ["asuka-core", "asuka-starknet", "examples"]
resolver = "2"

[workspace.dependencies]
rig-core = { version = "0.5.0", features = ["derive"] }
rig-sqlite = "0.1.0"
tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.4"
