[package]
name = "asuka-starknet"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.0"
reqwest = { version = "0.12.9", features = ["json"] }
rig-core.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
slot = { git = "https://github.com/cartridge-gg/slot", rev = "1298a30" }
starknet = "0.12.0"
thiserror = { workspace = true }
tokio-rusqlite = { git = "https://github.com/programatik29/tokio-rusqlite", features = [
    "bundled",
] }
url = "2.5"
