[package]
name = "asuka-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
asuka-core = { path = "../asuka-core" }
asuka-starknet = { path = "../asuka-starknet" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive", "env"] }
dotenv = "0.15"
toml = "0.8"
rig-core.workspace = true
sqlite-vec = "0.1"
tokio-rusqlite = { git = "https://github.com/programatik29/tokio-rusqlite", features = [
    "bundled",
] }
chrono = "0.4"

[[example]]
name = "main"
path = "src/main.rs"
